--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@theme {
+  --color-merahTua: #31171c;
+  --color-tahiti: #3ab7bf;
+  --color-bermuda: #78dcca;
+}
+
+@body {
+  @apply box-border;
+}
