--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-	--color-merahTua: #261014;
-	--color-tahiti: #3ab7bf;
-	--color-bermuda: #78dcca;
-	--color-merahTua2: #58101c;
+  --color-merahTua: #261014;
+  --color-tahiti: #3ab7bf;
+  --color-bermuda: #78dcca;
+  --color-merahTua2: #58101c;
+}
+
+body {
+  @apply bg-gray-100;
 }
