--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,19 +1,28 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #176b87;
-  --color-secondary: #b4d4ff;
-  --color-background: #eef5ff;
-  --color-text: #111827;
-  --color-biru: #f6f8f9;
-  --color-dark: #071c23;
+    --color-primary: #176b87;
+    --color-secondary: #b4d4ff;
+    --color-background: #eef5ff;
+    --color-text: #111827;
+    --color-biru: #f6f8f9;
+    --color-dark: #071c23;
 }
-
 html {
-  @apply scroll-smooth;
+    @apply scroll-smooth;
 }
 
 body {
-  @apply bg-background;
-  @apply scroll-smooth;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #f9fafb;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
